--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,14 +1,12 @@
-name: Deploy to GitHub Pages
-
 on:
   push:
     branches:
       - main
-
+      
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
+    
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
@@ -20,10 +18,10 @@ jobs:
         else
           echo "ssh-agent est déjà installé."
         fi
-
+      
     - name: Configure l'agent SSH
       env:
-        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+        SSH_PRIVATE_KEY: ${{secrets.SSH_PRIVATE_KEY}}
       run: |
         eval "$(ssh-agent -s)"
         echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
@@ -32,16 +30,7 @@ jobs:
         ssh-keyscan 85.31.239.153 >> ~/.ssh/known_hosts
         chmod 644 ~/.ssh/known_hosts
         ssh root@85.31.239.153 "hostname"
-
-    - name: Déployer les fichiers
-      run: |
+        cd ../
+        ls
         scp -r TorrentEase/.dockerignore root@85.31.239.153:/home/TorrentEase
-        ssh root@85.31.239.153 << 'EOF'
-          cd /home/TorrentEase
-          ls
-          cd front
-          npm run build
-          cd ..
-          cd torrentCreator
-          ls
-        EOF
+        ssh root@85.31.239.153 "cd /home/TorrentEase && ls && cd front && npm run build && cd .. && cd torrentCreator && ls"
